--- a/src/WEB-INF/web.xml
+++ b/src/WEB-INF/web.xml
@@ -23,6 +23,10 @@ My First Servlet
    <servlet-class>npackage.getbestbuy</servlet-class> 
 </servlet> 
 <servlet> 
+   <servlet-name>getsearch</servlet-name> 
+   <servlet-class>npackage.getsearch</servlet-class> 
+</servlet> 
+<servlet> 
    <servlet-name>insertdata</servlet-name> 
    <servlet-class>npackage.insertdata</servlet-class> 
 </servlet> 
@@ -70,6 +74,10 @@ My First Servlet
 <servlet-mapping> 
    <servlet-name>getbestbuy</servlet-name> 
    <url-pattern>/getbestbuy</url-pattern> 
+</servlet-mapping> 
+<servlet-mapping> 
+   <servlet-name>getsearch</servlet-name> 
+   <url-pattern>/getsearch</url-pattern> 
 </servlet-mapping> 
 <servlet-mapping> 
    <servlet-name>CardNumberValidationServlet</servlet-name> 
