--- a/src/etc/web.xml
+++ b/src/etc/web.xml
@@ -3,35 +3,25 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
     version="2.4">
 
-<listener>
-<listener-class>com.ruserba.web.DatabaseInit</listener-class>
-</listener>
-
 <context-param>
-	<param-name>url</param-name>
+	<param-name>db_url</param-name>
 	<param-value>jdbc:mysql://localhost/</param-value>
 </context-param>
 <context-param>
-	<param-name>database</param-name>
+	<param-name>db_name</param-name>
 	<param-value>ruserba</param-value>
 </context-param>
 <context-param>
-	<param-name>username</param-name>
+	<param-name>db_username</param-name>
 	<param-value>root</param-value>
 </context-param>
 <context-param>
-	<param-name>password</param-name>
+	<param-name>db_password</param-name>
 	<param-value></param-value>
 </context-param>
 
-<servlet>
-	<servlet-name>Coba</servlet-name>
-	<jsp-file>/WEB-INF/jsp/coba.jsp</jsp-file>
-</servlet>
-
-<servlet-mapping>
-	<servlet-name>Coba</servlet-name>
-	<url-pattern>/coba</url-pattern>
-</servlet-mapping>
+<listener>
+<listener-class>com.ruserba.web.DatabaseInit</listener-class>
+</listener>
 
 </web-app>
