--- a/src/etc/web.xml
+++ b/src/etc/web.xml
@@ -20,6 +20,15 @@
 	<param-value></param-value>
 </context-param>
 
+<servlet>
+	<servlet-name>Login</servlet-name>
+	<servlet-class>com.ruserba.web.LoginService</servlet-class>
+</servlet>
+<servlet-mapping>
+	<servlet-name>Login</servlet-name>
+	<url-pattern>/login</url-pattern>
+</servlet-mapping>
+
 <listener>
 <listener-class>com.ruserba.web.DatabaseInit</listener-class>
 </listener>
