--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -15,6 +15,10 @@
 		<servlet-name>User</servlet-name>
 		<servlet-class>com.frexesc.controller.User</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>Card</servlet-name>
+		<servlet-class>com.frexesc.controller.Card</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/login</url-pattern>
@@ -24,10 +28,14 @@
 		<url-pattern>/logout</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
-	    <servlet-name>User</servlet-name>
-	    <url-pattern>/user</url-pattern>
+		<servlet-name>User</servlet-name>
+		<url-pattern>/user</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Card</servlet-name>
+		<url-pattern>/card</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
-		<welcome-file>home.jsp</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
