--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -59,4 +59,14 @@
     <servlet-name>ajaxprofile</servlet-name>
     <url-pattern>/ajaxprofile</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ajaxbarang</display-name>
+    <servlet-name>ajaxbarang</servlet-name>
+    <servlet-class>tubes2wbd.ajaxbarang</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ajaxbarang</servlet-name>
+    <url-pattern>/ajaxbarang</url-pattern>
+  </servlet-mapping>
 </web-app>
