--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,9 +4,17 @@
         <servlet-name>RegisterServlet</servlet-name>
         <servlet-class>ruserba.servlets.RegisterServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>RegisterKartuServlet</servlet-name>
+        <servlet-class>ruserba.servlets.RegisterKartuServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RegisterServlet</servlet-name>
         <url-pattern>/RegisterServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RegisterKartuServlet</servlet-name>
+        <url-pattern>/RegisterKartuServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
