--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -19,6 +19,10 @@
 		<servlet-name>Card</servlet-name>
 		<servlet-class>com.frexesc.controller.Card</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>Gallery</servlet-name>
+		<servlet-class>com.frexesc.controller.Gallery</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/login</url-pattern>
@@ -34,6 +38,10 @@
 	<servlet-mapping>
 		<servlet-name>Card</servlet-name>
 		<url-pattern>/card</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Gallery</servlet-name>
+		<url-pattern>/barang/index</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
