menyempurnakan base aplikasi

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>RegisterKartuServlet</servlet-name>
         <servlet-class>ruserba.servlets.RegisterKartuServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>RequestServlet</servlet-name>
+        <servlet-class>ruserba.servlets.RequestServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RegisterServlet</servlet-name>
         <url-pattern>/RegisterServlet</url-pattern>
@@ -15,6 +19,10 @@
     <servlet-mapping>
         <servlet-name>RegisterKartuServlet</servlet-name>
         <url-pattern>/RegisterKartuServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RequestServlet</servlet-name>
+        <url-pattern>/index.jsp</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
