--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -23,6 +23,10 @@
 		<servlet-name>Gallery</servlet-name>
 		<servlet-class>com.frexesc.controller.Gallery</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>Detail</servlet-name>
+		<servlet-class>com.frexesc.controller.Detail</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/login</url-pattern>
@@ -42,6 +46,10 @@
 	<servlet-mapping>
 		<servlet-name>Gallery</servlet-name>
 		<url-pattern>/barang/index</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Detail</servlet-name>
+		<url-pattern>/barang/detail</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
