--- a/Buat konek ke database/nbproject/private/private.properties
+++ b/Buat konek ke database/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=/Users/dimas/Library/Application Support/NetBeans/7.3.1/config/GlassFishEE6/Properties/gfv3-926034999.properties
+deploy.ant.properties.file=C:\\Users\\Aidil Syaputra\\AppData\\Roaming\\NetBeans\\7.2\\gfv3-1650694832.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/Applications/NetBeans/glassfish-3.1.2.2/glassfish/domains/domain1
-j2ee.server.home=/Applications/NetBeans/glassfish-3.1.2.2/glassfish
-j2ee.server.instance=[/Applications/NetBeans/glassfish-3.1.2.2/glassfish:/Applications/NetBeans/glassfish-3.1.2.2/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/Applications/NetBeans/glassfish-3.1.2.2
-user.properties.file=/Users/dimas/Library/Application Support/NetBeans/7.3.1/build.properties
+j2ee.server.domain=C:/Users/Aidil Syaputra/AppData/Roaming/NetBeans/7.2/config/GF3/domain1
+j2ee.server.home=C:/Program Files/glassfish-3.1.2.2/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-3.1.2.2\\glassfish;C:\\Program Files\\glassfish-3.1.2.2\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-3.1.2.2
+user.properties.file=C:\\Users\\Aidil Syaputra\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
