--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -27,6 +27,10 @@
 		<servlet-name>Detail</servlet-name>
 		<servlet-class>com.frexesc.controller.Detail</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>Add Cart</servlet-name>
+		<servlet-class>com.frexesc.controller.AddCart</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/login</url-pattern>
@@ -50,6 +54,10 @@
 	<servlet-mapping>
 		<servlet-name>Detail</servlet-name>
 		<url-pattern>/barang/detail</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>AddCart</servlet-name>
+		<url-pattern>/barang/addCart</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
