--- a/src/WEB-INF/web.xml
+++ b/src/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-version="2.5">
+version="2.5" >
 <display-name>My First Servlet - www.way4code.com</display-name>
 <description>
 My First Servlet
@@ -86,6 +86,11 @@ My First Servlet
    <servlet-name>Coba</servlet-name> 
    <servlet-class>Coba</servlet-class> 
 </servlet> 
+<servlet>
+	<servlet-name>CartController</servlet-name>
+	<servlet-class>npackage.CartController</servlet-class>
+</servlet>
+
 <!-- servlet mapping --> 
 <servlet-mapping> 
    <servlet-name>UsernameValidationServlet</servlet-name> 
@@ -151,7 +156,7 @@ My First Servlet
    <servlet-name>EmailValidationServlet</servlet-name> 
    <url-pattern>/EmailValidationServlet</url-pattern> 
 </servlet-mapping> 
-
+ 
 <servlet-mapping> 
    <servlet-name>LoginServlet</servlet-name> 
    <url-pattern>/LoginServlet</url-pattern> 
@@ -168,5 +173,9 @@ My First Servlet
 <servlet-mapping> 
    <servlet-name>CookieExample</servlet-name> 
    <url-pattern>/CookieExample</url-pattern> 
-</servlet-mapping>  
+</servlet-mapping> 
+<servlet-mapping>
+	<servlet-name>CartController</servlet-name>
+	<url-pattern>/CartController</url-pattern>
+</servlet-mapping> 
 </web-app> 
