--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.27-bin.jar"/>
+	<classpathentry exported="true" kind="lib" path="java-json.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
