--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -47,6 +47,14 @@
 		<servlet-name>Search</servlet-name>
 		<servlet-class>com.frexesc.controller.Search</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>DeleteBarang</servlet-name>
+		<servlet-class>com.frexesc.controller.DeleteBarang</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>UpdateCart</servlet-name>
+		<servlet-class>com.frexesc.controller.UpdateCart</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/login</url-pattern>
@@ -94,6 +102,14 @@
 	<servlet-mapping>
 		<servlet-name>Search</servlet-name>
 		<url-pattern>/barang/search</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>DeleteBarang</servlet-name>
+		<url-pattern>/barang/deleteBarang</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UpdateCart</servlet-name>
+		<url-pattern>/barang/updateCart</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
