--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -13,4 +13,15 @@ version="2.4">
 		<servlet-name>Chapter1 Servlet</servlet-name>
 		<url-pattern>/registrasi</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>lakukansaja</servlet-name>
+		<servlet-class>warung.registrasi</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>lakukansaja</servlet-name>
+		<url-pattern>/lakukan</url-pattern>
+	</servlet-mapping>
+	
 </web-app>
