--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
-deploy.ant.properties.file=C:\\Users\\ize\\AppData\\Roaming\\NetBeans\\7.2.1\\tomcat70.properties
-j2ee.server.home=D:/xampp/tomcat
-j2ee.server.instance=tomcat70:home=D:\\xampp\\tomcat
+deploy.ant.properties.file=C:\\Users\\Ahmad Fauzan\\AppData\\Roaming\\NetBeans\\7.3\\tomcat70.properties
+j2ee.server.home=F:/xampp/tomcat
+j2ee.server.instance=tomcat70:home=F:\\xampp\\tomcat
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\ize\\AppData\\Roaming\\NetBeans\\7.2.1\\build.properties
+user.properties.file=C:\\Users\\Ahmad Fauzan\\AppData\\Roaming\\NetBeans\\7.3\\build.properties
