admin redirect, benerin login pakai cookie, benerin logout

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -63,9 +63,17 @@
 		<servlet-name>AdminBarang</servlet-name>
 		<servlet-class>com.frexesc.controller.AdminBarang</servlet-class>
 	</servlet>
+	<servlet>
+	    <servlet-name>Register</servlet-name>
+	    <servlet-class>com.frexesc.controller.Register</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Index</servlet-name>
 		<url-pattern>/index</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+	    <servlet-name>Register</servlet-name>
+	    <url-pattern>/register</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
