--- a/src/Tubes-II IF3110/nbproject/project.properties
+++ b/src/Tubes-II IF3110/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.java-json.jar=lib\\java-json.jar
 file.reference.javax.servlet.jsp.jstl-1.2.1.jar=lib/javax.servlet.jsp.jstl-1.2.1.jar
 file.reference.javax.servlet.jsp.jstl-api-1.2.1.jar=lib/javax.servlet.jsp.jstl-api-1.2.1.jar
 includes=**
@@ -39,7 +40,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.javax.servlet.jsp.jstl-1.2.1.jar}:\
-    ${file.reference.javax.servlet.jsp.jstl-api-1.2.1.jar}
+    ${file.reference.javax.servlet.jsp.jstl-api-1.2.1.jar}:\
+    ${file.reference.java-json.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
