--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -80,4 +80,14 @@
     <servlet-name>Search</servlet-name>
     <url-pattern>/search</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ViewCart</display-name>
+    <servlet-name>ViewCart</servlet-name>
+    <servlet-class>ViewCart</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ViewCart</servlet-name>
+    <url-pattern>/ViewCart</url-pattern>
+  </servlet-mapping>
 </web-app>
