bikin add, edit, delete barang. interaksi dengan db baru GET

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -40,6 +40,16 @@
     <servlet-name>DetailBarang</servlet-name>
     <url-pattern>/detail</url-pattern>
   </servlet-mapping>
+    <servlet>
+    <description></description>
+    <display-name>InventoriAdmin</display-name>
+    <servlet-name>InventoriAdmin</servlet-name>
+    <servlet-class>InventoriAdmin</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>InventoriAdmin</servlet-name>
+    <url-pattern>/inventori</url-pattern>
+  </servlet-mapping>
   <servlet>
     <description></description>
     <display-name>UserServlet</display-name>
