--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -64,16 +64,20 @@
 		<servlet-class>com.frexesc.controller.AdminBarang</servlet-class>
 	</servlet>
 	<servlet>
-	    <servlet-name>Register</servlet-name>
-	    <servlet-class>com.frexesc.controller.Register</servlet-class>
+		<servlet-name>Register</servlet-name>
+		<servlet-class>com.frexesc.controller.Register</servlet-class>
+	</servlet>
+	<servlet>
+	    <servlet-name>UploadImage</servlet-name>
+	    <servlet-class>com.frexesc.controller.UploadImage</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Index</servlet-name>
 		<url-pattern>/index</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
-	    <servlet-name>Register</servlet-name>
-	    <url-pattern>/register</url-pattern>
+		<servlet-name>Register</servlet-name>
+		<url-pattern>/register</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
@@ -134,6 +138,10 @@
 	<servlet-mapping>
 		<servlet-name>AdminBarang</servlet-name>
 		<url-pattern>/admin</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+	    <servlet-name>UploadImage</servlet-name>
+	    <url-pattern>/upload</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index</welcome-file>
