--- a/.classpath
+++ b/.classpath
@@ -8,6 +8,7 @@
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry exported="true" kind="lib" path="E:/xampp/tomcat/lib/servlet-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/xampp/tomcat/lib/servlet-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Vaio/Downloads/json-lib-2.4-jdk15.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
