Admin Oke (ADD, DELETE dan EDIT)

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -75,4 +75,11 @@
         <error-code>404</error-code>
         <location>/index.jsp?page=error</location>
     </error-page>
+    <context-param> 
+    <description>Location to store uploaded file</description> 
+    <param-name>file-upload</param-name> 
+    <param-value>
+         E:\Fauzan\GitHub\IF3110-Tubes-II\build\web\assets\barang\
+     </param-value> 
+</context-param>
 </web-app>
