--- a/RuserbaWeb/nbproject/private/private.properties
+++ b/RuserbaWeb/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\compaq\\.netbeans\\7.1.1\\gfv3447458411.properties
+deploy.ant.properties.file=C:\\Users\\G480_chan\\AppData\\Roaming\\NetBeans\\7.4\\config\\GlassFishEE6\\Properties\\gfv3-1412446998.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=E:/Programs/GlassFish/glassfish4/glassfish/domains/domain1
-j2ee.server.home=E:/Programs/GlassFish/glassfish4/glassfish
-j2ee.server.instance=[E:\\Programs\\GlassFish\\glassfish4\\glassfish;E:\\Programs\\GlassFish\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=E:/Programs/GlassFish/glassfish4
-user.properties.file=C:\\Users\\compaq\\.netbeans\\7.1.1\\build.properties
+j2ee.server.domain=C:/Users/G480_chan/AppData/Roaming/NetBeans/7.4/config/GF_4.0/domain1
+j2ee.server.home=A:/Program Files/glassfish-4.0/glassfish
+j2ee.server.instance=[A:\\Program Files\\glassfish-4.0\\glassfish;A:\\Program Files\\glassfish-4.0\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=A:/Program Files/glassfish-4.0
+user.properties.file=C:\\Users\\G480_chan\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
