--- a/.classpath
+++ b/.classpath
@@ -9,7 +9,7 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="E:/XAMPP/tomcat/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="E:/XAMPP/tomcat/mysql-connector-java-5.1.26-bin.jar"/>
+	<classpathentry kind="lib" path="C:/xampp/tomcat/lib/mysql-connector-java-5.1.27-bin.jar"/>
+	<classpathentry kind="lib" path="C:/xampp/tomcat/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
