--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -52,4 +52,24 @@ version="2.4">
 		<servlet-name>delta</servlet-name>
 		<url-pattern>/list_barang</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>delta2</servlet-name>
+		<servlet-class>admin.edit_barang</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>delta2</servlet-name>
+		<url-pattern>/edit_barang</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>delta3</servlet-name>
+		<servlet-class>admin.d0_edit</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>delta3</servlet-name>
+		<url-pattern>/do_edit</url-pattern>
+	</servlet-mapping>
 </web-app>
