--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -38,6 +38,14 @@
         <servlet-name>DeleteItemServlet</servlet-name>
         <servlet-class>ruserba.servlets.DeleteItemServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>ruserba.servlets.LoginServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-class>ruserba.servlets.LogoutServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RegisterServlet</servlet-name>
         <url-pattern>/RegisterServlet</url-pattern>
@@ -66,6 +74,14 @@
         <servlet-name>DeleteItemServlet</servlet-name>
         <url-pattern>/DeleteItemServlet</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/LoginServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LogoutServlet</servlet-name>
+        <url-pattern>/LogoutServlet</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
@@ -75,11 +91,11 @@
         <error-code>404</error-code>
         <location>/index.jsp?page=error</location>
     </error-page>
-    <context-param> 
-    <description>Location to store uploaded file</description> 
-    <param-name>file-upload</param-name> 
-    <param-value>
+    <context-param>
+        <description>Location to store uploaded file</description>
+        <param-name>file-upload</param-name>
+        <param-value>
          E:\Fauzan\GitHub\IF3110-Tubes-II\build\web\assets\barang\
-     </param-value> 
-</context-param>
+     </param-value>
+    </context-param>
 </web-app>
